# maya-vector-displacement-deformer

./: .gitignore  CMakeLists.txt  README.md
example/: pyramid.mb
src/: GpuDeformerUtilities.cpp  GpuDeformerUtilities.h  VectorDisplacementDeformer.cl  VectorDisplacementDeformerNode.cpp  VectorDisplacementDeformerNode.h  VectorDisplacementGpuDeformerNode.cpp  VectorDisplacementGpuDeformerNode.h  VectorDisplacementHelperTypes.h  VectorDisplacementUtilities.cpp  VectorDisplacementUtilities.h
